# distributed-password-hacker

./: .gitignore
controller/: CMakeLists.txt
controller/include/: controller.h  encrypt_pwd.h  options.h  parse_args.h  structs.h
controller/src/: controller.c  main.c  parse_args.c
worker/: CMakeLists.txt
worker/include/: networking.h  options.h  parse_args.h  worker.h
worker/src/: encrypt_pwd.c  main.c  networking.c  parse_args.c  worker.c
